--- a/lab5/CMakeLists.txt
+++ b/lab5/CMakeLists.txt
@@ -3,4 +3,6 @@ project(lab5)
 add_subdirectory_if_exists(matrix)
 add_subdirectory_if_exists(memorychunk)
 add_subdirectory_if_exists(textpool)
-add_subdirectory_if_exists(xxx)
+add_subdirectory_if_exists(XXX)
+add_subdirectory_if_exists(marsjanin)
+add_subdirectory_if_exists(rodzicdziecko)
