--- a/lab7/CMakeLists.txt
+++ b/lab7/CMakeLists.txt
@@ -4,3 +4,7 @@ add_subdirectory_if_exists(arrayfill)
 add_subdirectory_if_exists(comparable)
 add_subdirectory_if_exists(iterable)
 add_subdirectory_if_exists(academiaqueries)
+add_subdirectory_if_exists(kula)
+
+add_subdirectory_if_exists(shape)
+add_subdirectory_if_exists(zad9)
